Mod z-index to fix Safari mobile glitch

--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,7 @@
     border-bottom-left-radius: 6px;
     background-color: #000;
     opacity: .5;
+    z-index: 30;
 }
 #left-eye-closed {
     top: 40px;
@@ -106,7 +107,6 @@
 #right-eye-closed {
     top: 40px;
     left: 60px;
-
 }
 
 .eyes {
@@ -116,6 +116,7 @@
     background-color: #fff;
     border-radius: 50%;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,.25), inset 0px 0px 3px 0px rgba(0,0,0,.3);
+    z-index: 40;
 }
 #left-eye {
     top: 29px;
